Fix Gear Set creation modal size on small viewports and correct validation error colors

--- a/zombiemancer.css
+++ b/zombiemancer.css
@@ -733,6 +733,11 @@ div.skeleton > div.lvl.dead {
 
 #new-gear-set {
   min-width: 30%;
+  max-width: 30%;
+}
+
+#new-gear-set .ranges .error {
+  color:#fd5252;
 }
 
 .inventory {
